; ModuleID = '/home/carl/AnghaBench/lwan/src/lib/extr_timeout.c_timeouts_timeout.c'
source_filename = "/home/carl/AnghaBench/lwan/src/lib/extr_timeout.c_timeouts_timeout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeouts = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @timeouts_timeout(%struct.timeouts* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.timeouts*, align 8
  store %struct.timeouts* %0, %struct.timeouts** %3, align 8
  %4 = load %struct.timeouts*, %struct.timeouts** %3, align 8
  %5 = getelementptr inbounds %struct.timeouts, %struct.timeouts* %4, i32 0, i32 0
  %6 = call i32 @list_empty(i32* %5)
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %12

9:                                                ; preds = %1
  %10 = load %struct.timeouts*, %struct.timeouts** %3, align 8
  %11 = call i32 @timeouts_int(%struct.timeouts* %10)
  store i32 %11, i32* %2, align 4
  br label %12

12:                                               ; preds = %9, %8
  %13 = load i32, i32* %2, align 4
  ret i32 %13
}

declare dso_local i32 @list_empty(i32*) #1

declare dso_local i32 @timeouts_int(%struct.timeouts*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
